# autoware.universe

latest/planning/behavior_path_planner/behavior_path_planner_avoidance-design/: index.html
latest/planning/behavior_path_planner/behavior_path_planner_drivable_area/: index.html
launch/tier4_localization_launch/launch/: localization.launch.xml
launch/tier4_localization_launch/launch/pose_estimator/: pose_estimator.launch.xml
launch/tier4_localization_launch/launch/util/: util.launch.py
localization/offline_nvtl_tool/: CMakeLists.txt  README.md  package.xml
localization/offline_nvtl_tool/include/offline_nvtl_tool/: availability_checker.hpp  map_loader.hpp  ndt.hpp  ndt_interface.hpp  offline_nvtl_tool.hpp  rosbag_handler.hpp  topic_synchronizer.hpp
localization/offline_nvtl_tool/launch/: offline_nvtl_tool.launch.xml
localization/offline_nvtl_tool/scripts/: make_trajectory.py  offline_nvtl_tool.py  plot_nvtl.py  validate.py  yaml_overwriter.py
localization/offline_nvtl_tool/src/: availability_checker.cpp  map_loader.cpp  ndt_interface.cpp  offline_nvtl_tool.cpp  topic_synchronizer.cpp
localization/pose_estimator_manager/: CMakeLists.txt  package.xml
localization/pose_estimator_manager/include/: pose_estimator_manager.hpp
localization/pose_estimator_manager/include/pose_estimator_manager/: base_pose_estimator_sub_manager.hpp  grid_info.hpp  manager_client.hpp  pose_estimator_manager.hpp
localization/pose_estimator_manager/launch/: pose_estimator_manager.launch.xml
localization/pose_estimator_manager/src/: ndt_sub_manager.cpp  pcdless_sub_manager.cpp  pose_estimator_manager_core.cpp  pose_estimator_manager_node.cpp
main/planning/behavior_path_planner/behavior_path_planner_avoidance-design/: index.html
main/planning/behavior_path_planner/behavior_path_planner_drivable_area/: index.html
sensing/pointcloud_preprocessor/: CMakeLists.txt
sensing/pointcloud_preprocessor/src/drop_filter/: drop_filter_nodelet.cpp
