<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>offline_nvtl_tool</name>
  <version>0.0.0</version>
  <description>The acceleration estimation package</description>
  <maintainer email="kento.yabuuchi.2@tier4.jp">Kento Yabuuchi</maintainer>
  <license>Apache License 2.0</license>
  <author email="kento.yabuuchi.2@tier4.jp">Kento Yabuuchi</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>rosbag2_cpp</depend>
  <depend>ndt_omp</depend>
  <depend>ndt_scan_matcher</depend>
  <depend>pcl_conversions</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
